src/ui/snapshots/docrev__ui__grid__tests__custom_column_widths_change_the_grid.snap
---
source: src/ui/grid.rs
expression: "render_text(&view, &mut scroll, 50, 6)"
---
 C1     │ ok
  │         A          │  B   │   C
 1│幅20の列です        │    42│ok

[W]
                       c:comment  q:quit  ^G:sheet
