src/ui/snapshots/docrev__ui__grid__tests__editor_popup_overlays_the_grid.snap
---
source: src/ui/grid.rs
expression: "render_text(&view, &mut scroll, 50, 10)"
---
 B2     │ 120
  │     A      │     B      │     C
 1┌ Comment on B2 ─────────────────────────────┐
 2│line one                                    │
 3│line two█                                   │
  │Enter:newline  Ctrl+S:save  Esc:cancel      │
  └────────────────────────────────────────────┘

[売上]
                      c:comment  q:quit  Tab:sheet
