src/ui/snapshots/docrev__ui__grid__tests__long_text_wraps_within_its_column.snap
---
source: src/ui/grid.rs
assertion_line: 998
expression: "render_text(&view, &mut scroll, 50, 12)"
---
 B3     │
  │     A      │     B
 1│あいうえおか│
  │きくけこさし│
  │すせそ      │
 2│あいうえおか│X
  │きくけこさし│
  │すせそ      │
 3│12345678901…│

[WR]
                       c:comment  q:quit  ^G:sheet
