src/ui/snapshots/docrev__ui__grid__tests__renders_grid_tabs_and_status.snap
---
source: src/ui/grid.rs
expression: "render_text(&view, &mut scroll, 46, 7)"
---
 B2     │ 120
  │     A      │     B      │     C
 1│項目        │単価        │数量
 2│りんご      │         120│           3
 3│みかん      │          80│           5
[売上][経費]
          c:comment  q:quit  ^G:sheet  ^F:find
